--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
    <title>NYC Parks</title>
 </head>
 <body>
+   <h1>NYC Parks</h1>
 
+   <h2>The Bronx</h2>
+   <h3>Van Cortlandt Park</h3>
+
+   <h2>Brooklyn</h2>
+   <h3>Prospect Park</h3>
+
+   <h2>Manhattan</h2>
+   <h3>Central Park</h3>
+
+   <h2>Queens</h2>
+   <h3>Flushing Meadows-Corona Park</h3>
 </body>
 </html>
